add fxn to make carousel responsive to date

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@ The above copyright notice and this permission notice shall be included in all c
     hindsight
   </title>
   <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
-  <!--     Fonts and icons     -->
+  <!-- roboto font -->
   <link rel="stylesheet" type="text/css"
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
@@ -61,7 +61,8 @@ The above copyright notice and this permission notice shall be included in all c
         <div class="col col-12 col-lg-6">
           <h2 class="title">Looking back on the year 2020</h2>
           <h4>An eventful period of time to say the least. Take a closer look at some of the major occurrences in the
-            United States this year, and how they shaped the country. Select a date with the slider above.</h4><br>
+            United States this year, and how they shaped the country.</h4>
+          <h4><i>Select a date with the slider above.</i></h4><br>
           <h3 class='title'>Today's New York Times Headline:</h3>
           <h4 id='NYT_headline'>U.S. Strike in Iraq Kills Qassim Suleimani, Commander of Iranian Forces</h4>
         </div>
@@ -77,13 +78,51 @@ The above copyright notice and this permission notice shall be included in all c
             <div class="card">
               <h4 class="card-header card-header-primary">Worth 1,000 words</h4>
               <div class="card-body">
-                <p class="description">One year, five dramatic photos.</p>
-                <a id='8cDGyMtfQyhe_spkh4vHYg' class='gie-slideshow' href='http://www.gettyimages.com/detail/1198921166'
-                  target='_blank'
-                  style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed
-                  from Getty Images</a>
-                <script>window.gie = window.gie || function (c) { (gie.q = gie.q || []).push(c) }; gie(function () { gie.widgets.load({ id: '8cDGyMtfQyhe_spkh4vHYg', sig: 'sw7OXsna6OJheqHdNpGl7q_w1wCd2SN2h6vPl_jqJFo=', w: '594px', h: '437px', items: '1198921166,1207384785,609664754,1212154390,1228639951', caption: true, tld: 'com', is360: false }) });</script>
-                <script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+                <p class="description">One month, five dramatic photos.</p>
+                <!-- january -->
+                <div id='getty_01'>
+                  <a id='UriCaunWTz5PE8wVB-qcNQ' class='gie-slideshow' href='http://www.gettyimages.com/detail/1199758362' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'UriCaunWTz5PE8wVB-qcNQ',sig:'nbNbZhrjr2gA7J6LuPhfIaDmwf42qoKvJi4WCZH8Nds=',w:'594px',h:'437px',items:'1199758362,1197859577,1199725684,1196648893,1197105873',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+                </div>
+                <!-- february -->
+                <div id='getty_02'>
+                  <a id='vsYQprolQotTPddFPzLSmA' class='gie-slideshow' href='http://www.gettyimages.com/detail/1198921166' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'vsYQprolQotTPddFPzLSmA',sig:'h4A7joCv9ev33MekcEc8E559ID-vqIR-QYeMwQPDMWQ=',w:'594px',h:'437px',items:'1198921166,1201342820,1198673702,1204061020,1205107204',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+                </div>
+                <!-- march -->
+                <div id='getty_03'>
+                  <a id='cvFfWTGOSVtJOY6HTBrY1Q' class='gie-slideshow' href='http://www.gettyimages.com/detail/1212406499' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'cvFfWTGOSVtJOY6HTBrY1Q',sig:'ZCIusG8T0WWQauDvL1xsKY5K1siRfkkO24HnynncTfg=',w:'594px',h:'437px',items:'1212406499,1212096158,1215850485,1215226002,1208074721',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+                </div>
+                <!-- april -->
+                <div id='getty_04'>
+                  <a id='RALF6W87Sa9t94z2qi7SyQ' class='gie-slideshow' href='http://www.gettyimages.com/detail/1217421822' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'RALF6W87Sa9t94z2qi7SyQ',sig:'Y8MNhuZZMXPSnp3ZCPmF9g1GZo657uudN3mc4aRjtLM=',w:'594px',h:'437px',items:'1217421822,1211126655,1221870060,1219002440,1220625985',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+                </div>
+                <!-- may -->
+                <div id='getty_05'>
+                  <a id='Rgb-EaY0TDdurNWw9O3pgQ' class='gie-slideshow' href='http://www.gettyimages.com/detail/1216203917' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'Rgb-EaY0TDdurNWw9O3pgQ',sig:'ZqCP7Lw9U7FzuC8X69XPSOOz5J0fmfgNCelnm1tnpdM=',w:'594px',h:'437px',items:'1216203917,1212200811,1216521439,1216441572,1213154753',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+                </div>
+                <!-- june -->
+                <div id='getty_06'>
+                  <a id='MaxOhum1Sq9ib8TxsXOMHg' class='gie-slideshow' href='http://www.gettyimages.com/detail/1248263848' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'MaxOhum1Sq9ib8TxsXOMHg',sig:'qJmTBgkunXIQlc07CCtTpAwmdj4k_kqKMHB_bz3pA70=',w:'594px',h:'437px',items:'1248263848,1219574942,1217205869,1216826634,1248763490',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+                </div>
+                <!-- july -->
+                <div id='getty_07'>
+                  <a id='-sAg7oIvTd1vpoIU0bTjWQ' class='gie-slideshow' href='http://www.gettyimages.com/detail/1227655719' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'-sAg7oIvTd1vpoIU0bTjWQ',sig:'Qyjm1iEfh6lkFhwr3AqNSB2tqXYWyCroGvsugjaQdmA=',w:'594px',h:'437px',items:'1227655719,1254442980,1257076009,1227683605,1262684326',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+                </div>
+                <!-- august -->
+                <div id='getty_08'>
+                  <a id='8zHl4MPlQ3dnTXr04-CKWg' class='gie-slideshow' href='http://www.gettyimages.com/detail/1228190520' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'8zHl4MPlQ3dnTXr04-CKWg',sig:'IibTYFhUYnRcRYPEJWGClbXnD057LNbnPvN2NCd9nfU=',w:'594px',h:'437px',items:'1228190520,1158921711,1228085286,1228126934,1228262329',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+                </div>
+                <!-- september -->
+                <div id='getty_09'>
+                  <a id='-lHi-u3mRZF_u8gH4sQHPg' class='gie-slideshow' href='http://www.gettyimages.com/detail/1228400613' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'-lHi-u3mRZF_u8gH4sQHPg',sig:'Ugs0AM2lFS9KPQAMtLIMMtt36qaohE2LibGGaPI0264=',w:'594px',h:'437px',items:'1228400613,1271196826,1273904096,1272163141,1271583715',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+                </div>
+                <!-- october -->
+                <div id='getty_10'>
+                  <a id='Pmbpxz8oQKxlqlB82_7tpw' class='gie-slideshow' href='http://www.gettyimages.com/detail/1282403621' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'Pmbpxz8oQKxlqlB82_7tpw',sig:'ueozzgz4WuO2abCTE2_kPOvEu9A7dcFYKJoxpMDPU6E=',w:'594px',h:'437px',items:'1282403621,1229228819,1229031744,1228948960,1228897458',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+                </div>
+                <!-- november -->
+                <div id='getty_11'>
+                  <a id='bcznxxSLT1BG7i9Jd4Eh_w' class='gie-slideshow' href='http://www.gettyimages.com/detail/1229463747' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'bcznxxSLT1BG7i9Jd4Eh_w',sig:'nosngihnQ1U8ts45ygSaBjK7HXa1Ypfc47nxchHOH2s=',w:'594px',h:'437px',items:'1229463747,1229470279,1229405822,1229520608,1284480526',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+                </div>
               </div>
             </div>
             <!-- end carousel card -->
@@ -144,7 +183,7 @@ The above copyright notice and this permission notice shall be included in all c
                 <div id='statechart'></div>
                 <strong><p>Daily COVID new cases to selected date, 7-day moving average:</p></strong>
                 <p id='state_covid_text'></p>
-                <span id='state_cases'></span>
+                <span id='state_cases'></span><br>
                 <strong><p>State unemployment:</p></strong>
                 <div id='stateUnemp'></div>
               </div>
