--- a/templates/index.html
+++ b/templates/index.html
@@ -331,7 +331,7 @@ The above copyright notice and this permission notice shall be included in all c
       <nav class="float-left">
         <ul>
           <li>
-            <a href="https://github.com/apizzo1/Project-2" target="blank">
+            <a href="https://github.com/apizzo1/Hindsight_2020" target="blank">
               Explore the GitHub repo here
             </a>
           </li>
