misc. edits before merge

--- a/templates/index.html
+++ b/templates/index.html
@@ -236,6 +236,7 @@ The above copyright notice and this permission notice shall be included in all c
               <div class="card-body ">
                 <div class="tab-content text-center">
                   <div class="tab-pane active" id="case_increases">
+                    <p class="description" align='left'>See the increase of COVID cases day-by-day.</p>
                     <div id='us_plot' style="height: 400px;"></div>
                   </div>
                   <div class="tab-pane" id="totals">
@@ -260,7 +261,7 @@ The above copyright notice and this permission notice shall be included in all c
                 <a tabindex="0" class="fas fa-info-circle" data-toggle="tooltip" data-placement="right" title="Graph that compares national data on movement to baseline measurements in January and February 2020. Data from Google (?). Hover over graph for more details."></a>
               </h4>
               <div class="card-body">
-                <p class="description">How has COVID impacted movement? Available for dates after February 24, 2020.</p>
+                <p class="description">How has COVID impacted everday movement? Available for dates after February 24, 2020.</p>
                 <div id='mobility_plot'></div>
               </div>
             </div>
@@ -281,7 +282,7 @@ The above copyright notice and this permission notice shall be included in all c
                 <table>
                   <tr>
                     <td>
-                      <div class="custom-select" style="width:100;">
+                      <div class="custom-select">
                         <select name="Stock1" id="stock1" onChange="selectStock(id, this.value)"></select>
                       </div>
                     </td>
