--- a/templates/index.html
+++ b/templates/index.html
@@ -243,13 +243,12 @@ The above copyright notice and this permission notice shall be included in all c
             <div class="card">
               <h4 class="card-header card-header-primary">National unemployment</h4>
               <div class="card-body">
-                <p class="description">Compare national unemployment rate (seasonally adjusted) to the rest of the environment.</p>
-                <!-- <div class="custom-select" style="width:50%"> -->
-                  <!-- <select name="Compare" id="compare"
-                    onChange="selectOption(this.options[this.selectedIndex].value)"></select> -->
-                <!-- </div> -->
-                <div id='unemployment' style="height:400px"></div>
-                <!-- <div id='legenddiv'></div> -->
+                <p class="description">Compare national unemployment to the rest of the environment.</p>
+                <div class="custom-select" style="width:50%">
+                  <select name="Compare" id="compare"
+                    onChange="selectOption(this.options[this.selectedIndex].value)"></select>
+                </div>
+                <div id='unemployment'></div>
               </div>
             </div>
             <!-- end unemployment ratings card -->
@@ -309,14 +308,8 @@ The above copyright notice and this permission notice shall be included in all c
 <!--   <script type="text/javascript" src="../static/js/GT-project/config.js"></script> -->
   <script type="text/javascript" src="../static/js/GT-project/leaflet-heat.js"></script>
   <script src='../static/js/GT-project/us-states_update.js'></script>
-  
-  <!-- amCharts files -->
-  <script src="//cdn.amcharts.com/lib/4/core.js"></script>
-  <script src="//cdn.amcharts.com/lib/4/charts.js"></script>
-  <script src="//cdn.amcharts.com/lib/4/maps.js"></script>
-  <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
-
   <!-- created js files -->
+
   <!-- <script src='../static/js/GT-project/config.js'></script> -->
   <script src="../static/js/GT-project/state_plot.js"></script>
   <script src='../static/js/GT-project/logic_slider_map.js'></script>
