fix card height

--- a/templates/index.html
+++ b/templates/index.html
@@ -317,7 +317,7 @@ The above copyright notice and this permission notice shall be included in all c
                   <select name="Compare" id="compare"
                     onChange="selectOption(this.options[this.selectedIndex].value)"></select>
                 </div> -->
-                <div id='unemployment'></div>
+                <div id='unemployment' style="height:400px"></div>
               </div>
             </div>
             <!-- end unemployment ratings card -->
