--- a/templates/index.html
+++ b/templates/index.html
@@ -402,97 +402,81 @@ The above copyright notice and this permission notice shall be included in all c
   <br>
   <footer class="footer footer-default">
     <div class='container' align='left'>
-      <div class='row'>
-        <div class='col-12 col-lg-9'>
+      <div class='row justify-content-between'>
+        <div class='col-12 col-lg-8'>
           <h5 class='text-uppercase'><b>Meet the team</b></h5>
           <div class='row'>
-            <div class='col-6 col-sm-3'>
-              <img src="../static/img/propics/maria.png" alt="maria" align='center'>
-              <h4>Maria</h4>
-              <div class='row icon-row' align='center'>
-                <div class='col-12'>
-                  <a href="https://github.com/mariajdong" target="_blank"><i class="fab fa-github fa-lg"></i></a>
+            <!-- maria -->
+            <div class='col-6 col-md-3'>
+              <h4>Maria
+                <span class='float-right'>
+                  <a href="https://github.com/mariajdong" target="_blank"><i class="fab fa-github"></i></a>
                   <a href="https://www.linkedin.com/in/maria-j-dong/" target="_blank"><i
-                      class="fab fa-linkedin-in fa-lg"></i></a>
-                </div>
-              </div>
+                      class="fab fa-linkedin"></i></a>
+                </span>
+              </h4>
+              <img src="../static/img/propics/maria_square.png" alt="maria" class='img-raised rounded img-fluid'>
               <p><br>Data analyst and licensed pharmacist.
                 Interested in healthcare data roles.
-                Coffee, beer, and music lover.</p>
+                Coffee, beer, and music lover.<br><br></p>
             </div>
-            <div class='col-6 col-sm-3'>
-              <img src="../static/img/propics/maria.png" alt="maria">
-              <p><br>Data analyst and licensed pharmacist.
-                Interested in healthcare data roles.
-                Coffee, beer, and music lover.</p>
-              <div class='row icon-row'>
-                <div class='col-12'>
-                  <a href="https://github.com/mariajdong" target="_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="https://www.linkedin.com/in/maria-j-dong/" target="_blank"><i
-                      class="fab fa-linkedin-in fa-lg"></i></a>
-                      <br><br>
-                </div>
-              </div>
+            <!-- ryan -->
+            <div class='col-6 col-md-3'>
+              <h4>Ryan
+                <span class='float-right'>
+                  <a href="https://github.com/Jonsey1696" target="_blank"><i class="fab fa-github"></i></a>
+                  <a href="https://www.linkedin.com/in/ryan-jones-2474251a1/" target="_blank"><i
+                      class="fab fa-linkedin"></i></a>
+                </span>
+              </h4>
+              <img src="../static/img/propics/ryan_square.png" alt="ryan" class='img-raised rounded img-fluid'>
+              <p><br>Data Engineer and Business Developer.
+                Sports fanatic.<br><br></p>
             </div>
-            <div class='col-6 col-sm-3'>
-              <img src="../static/img/propics/maria.png" alt="maria">
-              <p><br>Data analyst and licensed pharmacist.
-                Interested in healthcare data roles.
-                Coffee, beer, and music lover.</p>
-              <div class='row icon-row' align='center'>
-                <div class='col-12'>
-                  <a href="https://github.com/mariajdong" target="_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="https://www.linkedin.com/in/maria-j-dong/" target="_blank"><i
-                      class="fab fa-linkedin-in fa-lg"></i></a>
-                      <br><br>
-                </div>
-              </div>
+            <!-- rebecca -->
+            <div class='col-6 col-md-3'>
+              <h4>Becki
+                <span class='float-right'>
+                  <a href="https://github.com/rmoesw01" target="_blank"><i class="fab fa-github"></i></a>
+                  <a href="https://www.linkedin.com/in/becki-leeds/" target="_blank"><i
+                      class="fab fa-linkedin"></i></a>
+                </span></h4>
+              <img src="../static/img/propics/becki_square.png" alt="becki" class='img-raised rounded img-fluid'>
+              <p><br>Data Engineer and Teacher.
+                Interested in reasearch science and quality data roles.
+                Loves all kinds of puzzles.<br><br></p>
             </div>
-            <div class='col-6 col-sm-3'>
-              <img src="../static/img/propics/maria.png" alt="maria">
-              <p><br>Data analyst and licensed pharmacist.
-                Interested in healthcare data roles.
-                Coffee, beer, and music lover.</p>
-              <div class='row icon-row' align='center'>
-                <div class='col-12'>
-                  <a href="https://github.com/mariajdong" target="_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="https://www.linkedin.com/in/maria-j-dong/" target="_blank"><i
-                      class="fab fa-linkedin-in fa-lg"></i></a>
-                      <br><br>
-                </div>
-              </div>
+            <!-- amber -->
+            <div class='col-6 col-md-3'>
+              <h4>Amber
+                <span class='float-right'>
+                  <a href="https://github.com/apizzo1" target="_blank"><i class="fab fa-github"></i></a>
+                  <a href="https://www.linkedin.com/in/amber-l-pizzo/ target="_blank"><i
+                      class="fab fa-linkedin"></i></a>
+                </span></h4>
+              <img src="../static/img/propics/amber_square.png" alt="maria" class='img-raised rounded img-fluid'>
+              <p><br>Quality Engineer and data analyst.
+                Interested in product quality roles. <br>
+                LEGO enthusiast.<br><br></p>
             </div>
           </div>
         </div>
         <div class='col-12 col-lg-3'>
           <h5 class='text-uppercase'><b>Questions?</b></h5>
-          <p>Explore our <a href="https://github.com/apizzo1/Hindsight_2020">GitHub repository</a>, or feel free to reach out and connect with the team.<br><br></p>
+          <p>Explore our <b><a href="https://github.com/apizzo1/Hindsight_2020" target='blank'>GitHub repository</a></b>, or feel free to
+            reach out and connect with the team.<br><br></p>
           <h5 class='text-uppercase'><b>Want to see more?</b></h5>
-          <p>Check out our other project, <a href="https://rmoesw01.github.io/Climateers/index.html">Climateers</a>!</p>
-        
+          <p>Check out our other project, <b><a
+              href="https://rmoesw01.github.io/Climateers/index.html" target='blank'>Climateers</a></b>!<br><br></p>
+          <h5 class='text-uppercase'><b>Credits</b></h5>
+          <p><b>&copy;
+            <script>
+              document.write(new Date().getFullYear())
+            </script> hindsight</b>, template created by <b>
+            <a href="https://www.creative-tim.com/" target="blank">Creative Tim</a></b>.</p>
         </div>
       </div>
     </div>
-    <!-- <div class="container">
-      <nav class="float-left">
-        <ul>
-          <li>
-            <a href='https://github.com/apizzo1/Hindsight_2020' target="blank"><i class="fab fa-github fa-2x"></i></a>
-            <a href="#">Github</a>
-          </li>
-          <li>
-            <a href="#">About Us</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="copyright float-right">
-        &copy;
-        <script>
-          document.write(new Date().getFullYear())
-        </script>, template created by
-        <a href="https://www.creative-tim.com/" target="blank">Creative Tim</a>.
-      </div>
-    </div> -->
   </footer>
 
   <!-- jquery -->
